--- a/main.Rmd
+++ b/main.Rmd
@@ -271,7 +271,7 @@ $D(P||Q) := \int^\infty_{-\infty} p(x)f(\frac{p(x)}{q(x)})$ is the KL divergence
 <!-- With large $m$, chi-squared is asymptotically normal by the CLT. Thus, by CLT, ${\chi^2}_{m} \tilde{} N(m, 2m)$, which would depend on the number of discretization used to approximate the continuous distribution. Then $b_n = 1-1/n$ quantile of the normal distribution and $a_n = 1/[n*\phi(b_n)]$ where $\phi$ is the normal density function. $n$ is the number of pairwise comparisons being made. -->
 
 
-### Distance measure
+### Algorithm
 
 The algorithm employed for computing the distance measure is summarized as follows:
 
@@ -292,7 +292,7 @@ The algorithm employed for computing the distance measure is summarized as follo
 A stronger measure "max" is chosen for aggregating x-axis categories compared to "median" for aggregating facet categories as the measure is intended to put more importance in pointing towards distributional differences between x-axis categories than for facet categories.
 
 
-### Distribution of $MMPD_{raw}$
+### Distribution
 <!-- ### Need for normalisation -->
 
 From Figure \ref{fig:dist-across-facets} and \ref{fig:dist-across-x} shows the MMPD distribution is different for different levels of facets and x-axis levels. With increasing number of facets, the location of the distribution shift rightwards and with increasing x-axis levels, the scale of the distribution reduces. 
@@ -351,9 +351,8 @@ Finally, we run some simulation experiments to see if normalisation works. If no
 Thus these median maximum pairwise distances need to be normalized for different harmonies in a way that eliminates the effect of different levels, consequently enabling comparison across different harmonies. The Fisher–Tippett–Gnedenko theorem in the field of Extreme Value Theory states that the maximum of a sample of iid random variables after proper re-normalization can converge in distribution to only one of Weibull, Gumbel or Freschet distribution, independent of the underlying data or process.
 
 
+## Methodology
 
-
-### Normalize distances
 
 <!-- The harmony pairs could be arranged from highest to lowest average maximum pairwise distances across different levels of the harmonies. -->
 
@@ -376,53 +375,52 @@ Thus these median maximum pairwise distances need to be normalized for different
 
 <!-- ### why normalize -->
 
-Median and maximum distances are not robust to the number of levels and the metric would have higher values for harmonies with higher levels. Figure \ref{fig:mean-sd-max} shows how both mean and standard deviation of the distribution of maximum and median varies for different sample sizes ($n$). There is a rightward shift in the location and decrease in scale with increasing $n$. Thus these median maximum pairwise distances need to be normalized for different harmonies in a way that eliminates the effect of different levels, consequently enabling comparison across different harmonies. The Fisher–Tippett–Gnedenko theorem in the field of Extreme Value Theory states that the maximum of a sample of iid random variables after proper re-normalization can converge in distribution to only one of Weibull, Gumbel or Freschet distribution, independent of the underlying data or process.
+<!-- Median and maximum distances are not robust to the number of levels and the metric would have higher values for harmonies with higher levels. Figure \ref{fig:mean-sd-max} shows how both mean and standard deviation of the distribution of maximum and median varies for different sample sizes ($n$). There is a rightward shift in the location and decrease in scale with increasing $n$. Thus these median maximum pairwise distances need to be normalized for different harmonies in a way that eliminates the effect of different levels, consequently enabling comparison across different harmonies. The Fisher–Tippett–Gnedenko theorem in the field of Extreme Value Theory states that the maximum of a sample of iid random variables after proper re-normalization can converge in distribution to only one of Weibull, Gumbel or Freschet distribution, independent of the underlying data or process. -->
 
-More formally, $d_{1},d_{2}\ldots ,d_{n}$ be a sequence of independent and identically-distributed pairwise distances and $M_{n}=\max\{d_{1},\ldots ,d_{n}\}$. Then Fisher–Tippett–Gnedenko theorem [@De_Haan2007-yx] suggests that if a sequence of pairs of real numbers $(a_{n}, b_{n})$ exists such that each $a_{n}>0$ and $\lim _{{m\to \infty }}P\left({\frac  {M_{n}-b_{n}}{a_{n}}}\leq x\right)=F(x)$, where $F$ is a non-degenerate distribution function, then the limit distribution $F$ belongs to either the Gumbel, Fréchet or Weibull family. The normalizing constants $(a_{n}, b_{n})$ vary depending on the underlying distribution of the pairwise distances. Hence to normalize appropriately, it is 
-important to assume a distribution of these distances. 
+<!-- More formally, $d_{1},d_{2}\ldots ,d_{n}$ be a sequence of independent and identically-distributed pairwise distances and $M_{n}=\max\{d_{1},\ldots ,d_{n}\}$. Then Fisher–Tippett–Gnedenko theorem [@De_Haan2007-yx] suggests that if a sequence of pairs of real numbers $(a_{n}, b_{n})$ exists such that each $a_{n}>0$ and $\lim _{{m\to \infty }}P\left({\frac  {M_{n}-b_{n}}{a_{n}}}\leq x\right)=F(x)$, where $F$ is a non-degenerate distribution function, then the limit distribution $F$ belongs to either the Gumbel, Fréchet or Weibull family. The normalizing constants $(a_{n}, b_{n})$ vary depending on the underlying distribution of the pairwise distances. Hence to normalize appropriately, it is  -->
+<!-- important to assume a distribution of these distances.  -->
 
-For large $n$, the distribution of $M$ approaches a standard shape. But what about the case when $n$ is not large enough? The distribution of maximum in that case will indeed depend on $n$ and the underlying distribution of $D$. For large $n$, we could use EVT and CLT to normalise for $n$, however, most of the cyclic granularities encountered in practice have low $n$. Hence, normalisation could be done by bootstrapping procedure to ensure that the distribution of maximum/median have the same mean and variation for varying $n$.
+<!-- For large $n$, the distribution of $M$ approaches a standard shape. But what about the case when $n$ is not large enough? The distribution of maximum in that case will indeed depend on $n$ and the underlying distribution of $D$. For large $n$, we could use EVT and CLT to normalise for $n$, however, most of the cyclic granularities encountered in practice have low $n$. Hence, normalisation could be done by bootstrapping procedure to ensure that the distribution of maximum/median have the same mean and variation for varying $n$. -->
 
-```{r create_simdata}
+<!-- ```{r create_simdata} -->
 
-```
+<!-- ``` -->
 
-```{r create_nlevels}
+<!-- ```{r create_nlevels} -->
 
-```
-
-
-```{r norm_max_new}
-
-```
+<!-- ``` -->
 
 
+<!-- ```{r norm_max_new} -->
 
-```{r mean-sd-max, fig.cap = "Display shows mean and standard deviation of the distribution of maximum for sample sizes ranging from 2 to 30. There is a right shift in the distribution of maximum and median with increasing sample sizes."}
-
-library(ggridges)
-library(viridis)
-max_all_data <- create_nlevels(nlevels = seq(2, 30, 2),
-                           nsim = 500,
-                           sim_dist = distributional::dist_normal(5, 10), create_fun = max)
-
-g1 <- max_all_data %>% ggplot() + geom_density_ridges(aes(x=sim_data, y = as.factor(ind))) + ylab("n") + xlab("max")
-
-median_all_data <- create_nlevels(nlevels = seq(2, 30, 2),
-                           nsim = 500,
-                           sim_dist = distributional::dist_normal(5, 10), create_fun = median)
-
-g2 <- max_all_data %>% ggplot() + geom_boxplot(aes(x=sim_data, y = as.factor(ind)))  + ylab("n") + xlab("median")
-
-ggpubr::ggarrange(g1, g2, ncol = 2)
+<!-- ``` -->
 
 
-```
 
-## Performance
+<!-- ```{r mean-sd-max, fig.cap = "Display shows mean and standard deviation of the distribution of maximum for sample sizes ranging from 2 to 30. There is a right shift in the distribution of maximum and median with increasing sample sizes."} -->
+
+<!-- library(ggridges) -->
+<!-- library(viridis) -->
+<!-- max_all_data <- create_nlevels(nlevels = seq(2, 30, 2), -->
+<!--                            nsim = 500, -->
+<!--                            sim_dist = distributional::dist_normal(5, 10), create_fun = max) -->
+
+<!-- g1 <- max_all_data %>% ggplot() + geom_density_ridges(aes(x=sim_data, y = as.factor(ind))) + ylab("n") + xlab("max") -->
+
+<!-- median_all_data <- create_nlevels(nlevels = seq(2, 30, 2), -->
+<!--                            nsim = 500, -->
+<!--                            sim_dist = distributional::dist_normal(5, 10), create_fun = median) -->
+
+<!-- g2 <- max_all_data %>% ggplot() + geom_boxplot(aes(x=sim_data, y = as.factor(ind)))  + ylab("n") + xlab("median") -->
+
+<!-- ggpubr::ggarrange(g1, g2, ncol = 2) -->
 
 
-# Simulation study
+<!-- ``` -->
+
+
+
+## Simulation study
 
 <!-- ### Distribution of distances -->
 
@@ -460,7 +458,7 @@ ggpubr::ggarrange(g1, g2, ncol = 2)
 
 The behavior of the measure is monitored and understood through simulation experiments. A single simulation consisting of computational operations on a panel generating MMPD the value of which represents to what extent a pair of cyclic granularities would be interesting when displayed in the design. In comparing different simulation runs, we distinguish between different distributions and simulation scenarios (also iterations may be).
 
-## Simulated designs
+### Simulated designs
 
  D1. Same distribution of the measured variable across all x-axis and facet categories
  D2. Different distribution across facet categories but same across x-axis categories
@@ -475,12 +473,12 @@ Each of these case scenarios tried against following distribution to check if un
  d) Weibull
 
 
-## Environment
+### Environment
 
 R version 4.0.1 (2020-06-06) is used with platform: x86_64-apple-darwin17.0 (64-bit) running under: macOS Mojave 10.14.6
 
 
-## Experimental set up
+### Experimental set up
 
 This section describes the design of simulation runs, in terms of the scenarios simulated, the number of permutations used to compute estimates and to display the distribution of MMPD.
 
@@ -521,7 +519,7 @@ The various designs are selected by increasing the mean/rate/shape of these dist
 <!-- Conclusions -->
 <!-- (in power) -->
 
-## Data Shuffling method
+### Data Shuffling method
 
 
 <!-- ```{r} -->
@@ -559,11 +557,11 @@ The various designs are selected by increasing the mean/rate/shape of these dist
 
 The mean and sd needs to be computed by permuting the data repeatedly. These permutations could be done in several ways given the design.
 
-### Method 1:
+#### Method 1:
 
 All data is repeatedly shuffled $nperm$ times in random manner to obtain the measure $m = median_{facets}(max_{x}dist)$. Then the normalised $m$ is obtained by scaling the observed value by the mean and sd of all $m$ obtained from the permutated data.
 
-### Method 2:
+#### Method 2:
 
 $m' = max_{x}dist$ is obtained for each facet.
 All $x$ levels are shuffled for each facet to obtain several $m'$s. Hence $m'$ is normalized for each facet level and the facets are aggregated using $m''= median(m')$, which is basically median(norm(max)). We need to normalise this median across facets as well. So we shuffle all facets for each $x$ level and obtain several $m''$s. In this approach, data is shuffled $2*nperm$ times and hence distances are computed $2*nperm$ times. It is computationally very intensive.
@@ -590,7 +588,6 @@ time_data %>%
 
 
 ```
-
 
 ## Results 
 
@@ -635,6 +632,16 @@ ggplot2::ggplot(design_all %>%
   scale_fill_viridis_d() +
   xlab("MMPD")
 ```
+
+### Performance of normalised MMPD
+
+
+```{r}
+
+```
+
+
+
 
 # The statistical test
 
