--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -290,45 +290,72 @@ $D(P||Q) := \int^\infty_{-\infty} p(x)f(\frac{p(x)}{q(x)})$ is the KL divergence
 
 ### Algorithm
 
-Consider two cyclic granularities $C_i$ and $C_j$, such that $C_i$ maps index set to a set $\{A_k \mid k=1,\dots,K\}$ and $C_j$ maps index set to a set $\{B_\ell \mid \ell =1,\dots,L\}$. Here, $A_k$ and $B_\ell$ are the levels/categories corresponding to $C_i$ and $C_j$ respectively. Let $S_{k\ell}$ be a subset of the index set such that for all $s \in S_{k\ell}$, $C_i(s) = A_k$ and $C_j(s) = B_\ell$. There are $KL$ such data subsets, one for each combination of levels ($A_k$, $B_\ell$). Moreover, consider that in the graphical space, $C_i$ is mapped to facets and $C_j$ is mapped to x-axis. 
+Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let the pairwise distances between combinations be denoted as $d_{(j,k), (j', k')} = JSD(a_{j}b_{k}, a_{j'}b_{k'})$. If $b_{k} = b_{k'}$, distances considered are within-facet. Otherwise they are between-facet.
+
+```{r distance-explain, fig.cap = "Mapping to data space to graphic space shown. Cyclic granularity A is mapped to x-axis and B is mapped to facets and the dotted lines represent the distances between different categories. Panel 1) and 2) show the between-facet distances. Panel 3) and 4) are used to illustrate within-facet distances when categories are un-ordered or ordered respectively. When categories are ordered, distances should only be considered for consecutive x-axis categories. Between-facet distances are distances between different facet levels for the same x-axis category, for example, distances between {($a_1$,$b_1$) and ($a_1$, $b_2$)} or {($a_1$,$b_1$) and ($a_1$, $b_3$)}."}
+knitr::include_graphics(here::here("paper/Figs/dist_explain.png"))
+```
+  
 
 
-The algorithm employed for computing the distance measure is summarized as follows:
+The maximum weighted pairwise distances are defined as:
+$$MEPD = max_{j, j', k, k'}(d*_{(j,k), (j', k')})
+\forall j, j' \in \{1, 2, \dots, J\}, k, k' \in \{1, 2, \dots, K\}$$
+where, 
 
-1. Fix harmony pair $(C_i, C_j)$.
-
-2. Fix $k$. Then there are $L$ groups corresponding to level $A_k$ of $C_i$.
-
-3. Compute  $m = \binom{L}{2}$ pairwise distances between distributions of $L$ unordered levels and $m = L-1$ pairwise distances for $L$ ordered categories.
-
-4. Identify maximum within the $m$ computed distances.
-
-<!-- 5. Compute distribution of maximum distance ($M$) by shuffling the data $200$ times and finishing Steps1-4 in each case. Scale $M$ using the mean and sd of the distribution.  -->
-
-5. Use Steps 1-4 to compute maximum distance for $\forall k \in  \{1, 2, \ldots, K\}$.
-
-6. Compute the distance measure MMPD_raw = median $(M_1, M_2, \dots, M_K)$.
+\begin{equation}
+d*_{(j,k), (j', k')} =
+\begin{cases}
+\lambda * d_{(j,k), (j', k')},& \text{if } b_{k} = b_{k'}\\
+(1-\lambda) * d_{(j,k), (j', k')},              & \text{otherwise}
+\end{cases}
+\end{equation}
 
 
-\begin{algorithm}[!thb]
-	\caption{Calculation for a raw distance measure between two cyclic granularities $A = \{ a_j: j = 1, 2, \dots, J\}$, $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets.}\label{alg:scoreopt}.
-	\begin{algorithmic}[1]
-		\Procedure{RawMMPD}{$A = \{ a_j: j = 1, 2, \dots, J\}$, $B = \{ b_k: k = 1, 2, \dots, K\}$, $v = \{ v_t: t = 1, 2, \dots, T\}$}.
-		\For{$k=1:K$, $j=1:J$}
-		\State Find distances between pairs of all possible combinations of categories $(a_jb_k,a_j'b_k')$ by computing JSD between quantiles of the measured variable $q(v)$ across these combinations.
-		\State $d \gets JSD(\tilde{q(v)_{a_{j}b_{k}}},\tilde{q(v)_{a_{j}'b_{k}'}})$
-		\If {$b_k = b_k'$}
-		\State $d* \gets \lambda d$  \Comment{upweight within-facet distances}
-		\Else
-		\State $d* \gets 1/\lambda d $ \Comment{downweight across-facet distances}
-		\EndFor
-		\State Set the raw distance measure as $max(d*)$ where max is taken over all $j, j', k, k'$.
 
-		\EndProcedure
-	\end{algorithmic}
-\end{algorithm}
+<!-- _j$ maps index set to a set $\{B_\ell \mid \ell =1,\dots,L\}$. Here, $A_k$ and $B_\ell$ are the levels/categories corresponding to $C_i$ and $C_j$ respectively. Let $S_{k\ell}$ be a subset of the index set such that for all $s \in S_{k\ell}$, $C_i(s) = A_k$ and $C_j(s) = B_\ell$. There are $KL$ such data subsets, one for each combination of levels ($A_k$, $B_\ell$). Moreover, consider that in the graphical space, $C_i$ is mapped to facets and $C_j$ is mapped to x-axis. -->
 
-A stronger measure "max" is chosen for aggregating x-axis categories compared to "median" for aggregating facet categories as the measure is intended to put more importance in pointing towards distributional differences between x-axis categories than for facet categories.
+
+ <!-- old -->
+<!-- Consider two cyclic granularities $C_i$ and $C_j$, such that $C_i$ maps index set to a set $\{A_k \mid k=1,\dots,K\}$ and $C_j$ maps index set to a set $\{B_\ell \mid \ell =1,\dots,L\}$. Here, $A_k$ and $B_\ell$ are the levels/categories corresponding to $C_i$ and $C_j$ respectively. Let $S_{k\ell}$ be a subset of the index set such that for all $s \in S_{k\ell}$, $C_i(s) = A_k$ and $C_j(s) = B_\ell$. There are $KL$ such data subsets, one for each combination of levels ($A_k$, $B_\ell$). Moreover, consider that in the graphical space, $C_i$ is mapped to facets and $C_j$ is mapped to x-axis.  -->
+
+
+<!-- The algorithm employed for computing the distance measure is summarized as follows: -->
+
+<!-- 1. Fix harmony pair $(C_i, C_j)$. -->
+
+<!-- 2. Fix $k$. Then there are $L$ groups corresponding to level $A_k$ of $C_i$. -->
+
+<!-- 3. Compute  $m = \binom{L}{2}$ pairwise distances between distributions of $L$ unordered levels and $m = L-1$ pairwise distances for $L$ ordered categories. -->
+
+<!-- 4. Identify maximum within the $m$ computed distances. -->
+
+<!-- <!-- 5. Compute distribution of maximum distance ($M$) by shuffling the data $200$ times and finishing Steps1-4 in each case. Scale $M$ using the mean and sd of the distribution.  --> -->
+
+<!-- 5. Use Steps 1-4 to compute maximum distance for $\forall k \in  \{1, 2, \ldots, K\}$. -->
+
+<!-- 6. Compute the distance measure MMPD_raw = median $(M_1, M_2, \dots, M_K)$. -->
+
+
+<!-- \begin{algorithm}[!thb] -->
+<!-- 	\caption{Calculation for a raw distance measure between two cyclic granularities $A = \{ a_j: j = 1, 2, \dots, J\}$, $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets.}\label{alg:scoreopt}. -->
+<!-- 	\begin{algorithmic}[1] -->
+<!-- 		\Procedure{RawMMPD}{$A = \{ a_j: j = 1, 2, \dots, J\}$, $B = \{ b_k: k = 1, 2, \dots, K\}$, $v = \{ v_t: t = 1, 2, \dots, T\}$}. -->
+<!-- 		\For{$k=1:K$, $j=1:J$} -->
+<!-- 		\State Find distances between pairs of all possible combinations of categories $(a_jb_k,a_j'b_k')$ by computing JSD between quantiles of the measured variable $q(v)$ across these combinations. -->
+<!-- 		\State $d \gets JSD(\tilde{q(v)_{a_{j}b_{k}}},\tilde{q(v)_{a_{j}'b_{k}'}})$ -->
+<!-- 		\If {$b_k = b_k'$} -->
+<!-- 		\State $d* \gets \lambda d$  \Comment{upweight within-facet distances} -->
+<!-- 		\Else -->
+<!-- 		\State $d* \gets 1/\lambda d $ \Comment{downweight across-facet distances} -->
+<!-- 		\EndFor -->
+<!-- 		\State Set the raw distance measure as $max(d*)$ where max is taken over all $j, j', k, k'$. -->
+
+<!-- 		\EndProcedure -->
+<!-- 	\end{algorithmic} -->
+<!-- \end{algorithm} -->
+
+<!-- A stronger measure "max" is chosen for aggregating x-axis categories compared to "median" for aggregating facet categories as the measure is intended to put more importance in pointing towards distributional differences between x-axis categories than for facet categories. -->
 
 # Behavior of raw distance measure
 
